Separated header and footer css and fixed blur on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -1,59 +1,3 @@
-/* Header */
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: transparent;
-  position: sticky;
-  z-index: 100;
-  left: 0;
-  right: 0;
-  top: 0;
-  height: 4.6875rem;
-  padding: 0 1rem 0 1rem;
-}
-
-/* Header Left Secction */
-.left-section {
-  display: flex;
-  margin-top: 2em;
-  margin-left: 3.75em;
-}
-.gg-link {
-  font-weight: 600;
-  font-size: 1.5rem;
-
-  text-decoration: none;
-  color: #1d1d1f;
-}
-
-/* Header Right Seaction  */
-.header .right-section {
-  display: flex;
-  margin-top: 2em;
-  margin-right: 3.75em;
-}
-.right-section a {
-  text-decoration-color: #ffde59;
-  text-decoration: none;
-  color: #1d1d1f;
-  margin-left: 2.2em;
-}
-.right-section a:hover {
-  text-decoration: underline;
-  text-decoration-color: #ffde59;
-  text-decoration-thickness: 0.25em; /* .25rem / 1rem = 0.25em */
-}
-.list {
-  list-style: none;
-  display: flex;
-}
-.selected {
-  text-decoration: underline;
-  text-decoration-color: #ffde59;
-  text-decoration-thickness: 0.25em;
-}
-
 /* Main */
 #main-content {
   display: flex;
@@ -96,50 +40,13 @@
   transform: scale(1.1);
 }
 
-/* Footer */
-.footer {
-  display: flex;
-  height: fit-content;
-  justify-content: center;
-  align-items: center;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #f5f5f7;
-}
-.footer .middle-section {
-  display: flex;
-  flex-direction: column;
-}
-.credit-container,
-.contact-container {
-  display: flex;
-  flex-direction: column;
-  padding: 1rem 0 1rem 0;
-  text-align: center;
-}
-.footer-text,
-.footer-click {
-  text-decoration: none;
-  color: var(--color-black);
-  margin: 0;
-  font-weight: 300;
-  font-size: 1rem;
-  transition: all 0.15s;
-}
-.footer-click:hover {
-  /* text-decoration: underline;
-  text-decoration-color: var(--color-black);
-  text-decoration-thickness: 0.1rem; */
-  border-bottom: solid var(--color-black) 0.1rem;
-}
-
 /* General */
 body {
   height: 100%;
   max-width: 100%;
   overflow-x: hidden;
 
+  margin: 0;
   background-color: #fafafa;
   color: #1d1d1f;
   font-family: Montserrat;
@@ -159,21 +66,11 @@ body {
 }
 /* Media */
 @media (max-width: 900px) {
-  /* Header */
-  .header .left-section,
-  .header,
-  .header .right-section {
-    margin: 0;
-  }
   /* Main Section */
   .about-info {
     grid-template-columns: 1fr;
   }
   .img-character {
     display: none;
-  }
-  /* Footer */
-  .footer-text {
-    font-size: 0.875rem;
   }
 }
